// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`KitchenEngine.generateProductionRun — Snapshot Tests Scenario 1: Single bundle × 1, serves_5 (family baseline) 1`] = `
{
  "assemblyTasks": {
    "Chicken Teriyaki - Family (5)": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "instructions": "Marinate chicken. Grill. Serve over rice.",
      "label_text": "Contains: Soy",
      "name": "Chicken Teriyaki",
      "qty": 1,
      "unit": "meals",
      "variant": "Family (5)",
    },
  },
  "debug": {
    "bundle_contributions": [
      {
        "bundle_id": "bundle-001-simple",
        "recipe_count": 1,
        "serving_multiplier": 1,
        "total_multiplier_sum": 1,
        "variant_size": "serves_5",
      },
    ],
    "ingredient_count": 3,
    "ingredient_total_qty": 1.2000000000000002,
    "multiplier_table": {
      "serves_2": 0.5,
      "serves_5": 1,
      "start_fresh": 1,
    },
    "reconciliation": {
      "bundles_processed": 1,
      "invalid_ingredients": 0,
      "orders_received": 1,
    },
    "trace": [
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-001-simple",
        "final_multiplier": 1,
        "order_quantity": 1,
        "recipe_id": "rec-001-chicken-teriyaki",
        "recipe_name": "Chicken Teriyaki",
        "serving_multiplier": 1,
        "variant_size": "serves_5",
      },
    ],
  },
  "prepTasks": {
    "Chicken Teriyaki": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "label_text": "Contains: Soy",
      "qty": 1,
      "unit": "servings",
    },
  },
  "rawIngredients": {
    "ing-001-chicken-breast": {
      "costPerUnit": 3.99,
      "costUnit": "lbs",
      "displayName": "Chicken Breast",
      "id": "ing-001-chicken-breast",
      "netQty": 0,
      "onHand": 5,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.5,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "lbs",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-008-rice": {
      "costPerUnit": 0.5,
      "costUnit": "cup",
      "displayName": "Rice",
      "id": "ing-008-rice",
      "netQty": 0,
      "onHand": 10,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.6000000000000001,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-009-soy-sauce": {
      "costPerUnit": 0.15,
      "costUnit": "cup",
      "displayName": "Soy Sauce",
      "id": "ing-009-soy-sauce",
      "netQty": 0,
      "onHand": 2,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.1,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
  },
}
`;

exports[`KitchenEngine.generateProductionRun — Snapshot Tests Scenario 2: Single bundle × 1, serves_2 (half scaling) 1`] = `
{
  "assemblyTasks": {
    "Chicken Teriyaki - Family (5)": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "instructions": "Marinate chicken. Grill. Serve over rice.",
      "label_text": "Contains: Soy",
      "name": "Chicken Teriyaki",
      "qty": 1,
      "unit": "meals",
      "variant": "Family (5)",
    },
  },
  "debug": {
    "bundle_contributions": [
      {
        "bundle_id": "bundle-001-simple",
        "recipe_count": 1,
        "serving_multiplier": 0.5,
        "total_multiplier_sum": 0.5,
        "variant_size": "serves_2",
      },
    ],
    "ingredient_count": 3,
    "ingredient_total_qty": 0.6000000000000001,
    "multiplier_table": {
      "serves_2": 0.5,
      "serves_5": 1,
      "start_fresh": 1,
    },
    "reconciliation": {
      "bundles_processed": 1,
      "invalid_ingredients": 0,
      "orders_received": 1,
    },
    "trace": [
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-001-simple",
        "final_multiplier": 0.5,
        "order_quantity": 1,
        "recipe_id": "rec-001-chicken-teriyaki",
        "recipe_name": "Chicken Teriyaki",
        "serving_multiplier": 0.5,
        "variant_size": "serves_2",
      },
    ],
  },
  "prepTasks": {
    "Chicken Teriyaki": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "label_text": "Contains: Soy",
      "qty": 0.5,
      "unit": "servings",
    },
  },
  "rawIngredients": {
    "ing-001-chicken-breast": {
      "costPerUnit": 3.99,
      "costUnit": "lbs",
      "displayName": "Chicken Breast",
      "id": "ing-001-chicken-breast",
      "netQty": 0,
      "onHand": 5,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.25,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "lbs",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-008-rice": {
      "costPerUnit": 0.5,
      "costUnit": "cup",
      "displayName": "Rice",
      "id": "ing-008-rice",
      "netQty": 0,
      "onHand": 10,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.30000000000000004,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-009-soy-sauce": {
      "costPerUnit": 0.15,
      "costUnit": "cup",
      "displayName": "Soy Sauce",
      "id": "ing-009-soy-sauce",
      "netQty": 0,
      "onHand": 2,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.05,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
  },
}
`;

exports[`KitchenEngine.generateProductionRun — Snapshot Tests Scenario 3: Single bundle × 25 (high volume) 1`] = `
{
  "assemblyTasks": {
    "Chicken Teriyaki - Family (5)": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "instructions": "Marinate chicken. Grill. Serve over rice.",
      "label_text": "Contains: Soy",
      "name": "Chicken Teriyaki",
      "qty": 25,
      "unit": "meals",
      "variant": "Family (5)",
    },
  },
  "debug": {
    "bundle_contributions": [
      {
        "bundle_id": "bundle-001-simple",
        "recipe_count": 1,
        "serving_multiplier": 1,
        "total_multiplier_sum": 25,
        "variant_size": "serves_5",
      },
    ],
    "ingredient_count": 3,
    "ingredient_total_qty": 30,
    "multiplier_table": {
      "serves_2": 0.5,
      "serves_5": 1,
      "start_fresh": 1,
    },
    "reconciliation": {
      "bundles_processed": 1,
      "invalid_ingredients": 0,
      "orders_received": 1,
    },
    "trace": [
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-001-simple",
        "final_multiplier": 25,
        "order_quantity": 25,
        "recipe_id": "rec-001-chicken-teriyaki",
        "recipe_name": "Chicken Teriyaki",
        "serving_multiplier": 1,
        "variant_size": "serves_5",
      },
    ],
  },
  "prepTasks": {
    "Chicken Teriyaki": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "label_text": "Contains: Soy",
      "qty": 25,
      "unit": "servings",
    },
  },
  "rawIngredients": {
    "ing-001-chicken-breast": {
      "costPerUnit": 3.99,
      "costUnit": "lbs",
      "displayName": "Chicken Breast",
      "id": "ing-001-chicken-breast",
      "netQty": 7.5,
      "onHand": 5,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 12.5,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "lbs",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-008-rice": {
      "costPerUnit": 0.5,
      "costUnit": "cup",
      "displayName": "Rice",
      "id": "ing-008-rice",
      "netQty": 5,
      "onHand": 10,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 15,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-009-soy-sauce": {
      "costPerUnit": 0.15,
      "costUnit": "cup",
      "displayName": "Soy Sauce",
      "id": "ing-009-soy-sauce",
      "netQty": 0.5,
      "onHand": 2,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 2.5,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
  },
}
`;

exports[`KitchenEngine.generateProductionRun — Snapshot Tests Scenario 4: Multi-bundle mixed sizes (family + couple) 1`] = `
{
  "assemblyTasks": {
    "BBQ Pulled Pork - Family (5)": {
      "allergens": null,
      "id": "rec-002-bbq-pulled-pork",
      "instructions": "Slow cook pork. Shred. Mix with sauce.",
      "label_text": undefined,
      "name": "BBQ Pulled Pork",
      "qty": 5,
      "unit": "meals",
      "variant": "Family (5)",
    },
    "Chicken Teriyaki - Family (5)": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "instructions": "Marinate chicken. Grill. Serve over rice.",
      "label_text": "Contains: Soy",
      "name": "Chicken Teriyaki",
      "qty": 8,
      "unit": "meals",
      "variant": "Family (5)",
    },
  },
  "debug": {
    "bundle_contributions": [
      {
        "bundle_id": "bundle-001-simple",
        "recipe_count": 1,
        "serving_multiplier": 0.5,
        "total_multiplier_sum": 1.5,
        "variant_size": "serves_2",
      },
      {
        "bundle_id": "bundle-002-combo",
        "recipe_count": 2,
        "serving_multiplier": 1,
        "total_multiplier_sum": 10,
        "variant_size": "serves_5",
      },
    ],
    "ingredient_count": 7,
    "ingredient_total_qty": 15.05,
    "multiplier_table": {
      "serves_2": 0.5,
      "serves_5": 1,
      "start_fresh": 1,
    },
    "reconciliation": {
      "bundles_processed": 2,
      "invalid_ingredients": 0,
      "orders_received": 2,
    },
    "trace": [
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-001-simple",
        "final_multiplier": 1.5,
        "order_quantity": 3,
        "recipe_id": "rec-001-chicken-teriyaki",
        "recipe_name": "Chicken Teriyaki",
        "serving_multiplier": 0.5,
        "variant_size": "serves_2",
      },
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-002-combo",
        "final_multiplier": 5,
        "order_quantity": 5,
        "recipe_id": "rec-001-chicken-teriyaki",
        "recipe_name": "Chicken Teriyaki",
        "serving_multiplier": 1,
        "variant_size": "serves_5",
      },
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-002-combo",
        "final_multiplier": 5,
        "order_quantity": 5,
        "recipe_id": "rec-002-bbq-pulled-pork",
        "recipe_name": "BBQ Pulled Pork",
        "serving_multiplier": 1,
        "variant_size": "serves_5",
      },
    ],
  },
  "prepTasks": {
    "BBQ Pulled Pork": {
      "allergens": null,
      "id": "rec-002-bbq-pulled-pork",
      "label_text": undefined,
      "qty": 5,
      "unit": "servings",
    },
    "Chicken Teriyaki": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "label_text": "Contains: Soy",
      "qty": 6.5,
      "unit": "servings",
    },
  },
  "rawIngredients": {
    "ing-001-chicken-breast": {
      "costPerUnit": 3.99,
      "costUnit": "lbs",
      "displayName": "Chicken Breast",
      "id": "ing-001-chicken-breast",
      "netQty": 0,
      "onHand": 5,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 3.25,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "lbs",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-003-salt": {
      "costPerUnit": 0.01,
      "costUnit": "tsp",
      "displayName": "Salt",
      "id": "ing-003-salt",
      "netQty": 0,
      "onHand": 100,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 1,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "tsp",
      "usedIn": [
        "BBQ Pulled Pork",
      ],
    },
    "ing-005-pork-loin": {
      "costPerUnit": 4.29,
      "costUnit": "lbs",
      "displayName": "Pork Loin",
      "id": "ing-005-pork-loin",
      "netQty": 4,
      "onHand": 0,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 4,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "lbs",
      "usedIn": [
        "BBQ Pulled Pork",
      ],
    },
    "ing-006-bbq-sauce": {
      "costPerUnit": 0.75,
      "costUnit": "cup",
      "displayName": "BBQ Sauce",
      "id": "ing-006-bbq-sauce",
      "netQty": 2,
      "onHand": 0,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 2,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "Amazon",
      "supplierUrl": "https://amazon.com",
      "unit": "cup",
      "usedIn": [
        "BBQ Pulled Pork",
      ],
    },
    "ing-007-brown-sugar": {
      "costPerUnit": 0.1,
      "costUnit": "cup",
      "displayName": "Brown Sugar",
      "id": "ing-007-brown-sugar",
      "netQty": 0,
      "onHand": 3,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.25,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "cup",
      "usedIn": [
        "BBQ Pulled Pork",
      ],
    },
    "ing-008-rice": {
      "costPerUnit": 0.5,
      "costUnit": "cup",
      "displayName": "Rice",
      "id": "ing-008-rice",
      "netQty": 0,
      "onHand": 10,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 3.9,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-009-soy-sauce": {
      "costPerUnit": 0.15,
      "costUnit": "cup",
      "displayName": "Soy Sauce",
      "id": "ing-009-soy-sauce",
      "netQty": 0,
      "onHand": 2,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.65,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
  },
}
`;

exports[`KitchenEngine.generateProductionRun — Snapshot Tests Scenario 5: Full bundle × 10 (all 3 recipes) 1`] = `
{
  "assemblyTasks": {
    "BBQ Pulled Pork - Family (5)": {
      "allergens": null,
      "id": "rec-002-bbq-pulled-pork",
      "instructions": "Slow cook pork. Shred. Mix with sauce.",
      "label_text": undefined,
      "name": "BBQ Pulled Pork",
      "qty": 10,
      "unit": "meals",
      "variant": "Family (5)",
    },
    "Chicken Teriyaki - Family (5)": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "instructions": "Marinate chicken. Grill. Serve over rice.",
      "label_text": "Contains: Soy",
      "name": "Chicken Teriyaki",
      "qty": 10,
      "unit": "meals",
      "variant": "Family (5)",
    },
    "Garlic Broccoli - Family (5)": {
      "allergens": undefined,
      "id": "rec-003-garlic-broccoli",
      "instructions": undefined,
      "label_text": undefined,
      "name": "Garlic Broccoli",
      "qty": 10,
      "unit": "meals",
      "variant": "Family (5)",
    },
  },
  "debug": {
    "bundle_contributions": [
      {
        "bundle_id": "bundle-003-full",
        "recipe_count": 3,
        "serving_multiplier": 1,
        "total_multiplier_sum": 30,
        "variant_size": "serves_5",
      },
    ],
    "ingredient_count": 10,
    "ingredient_total_qty": 42.5,
    "multiplier_table": {
      "serves_2": 0.5,
      "serves_5": 1,
      "start_fresh": 1,
    },
    "reconciliation": {
      "bundles_processed": 1,
      "invalid_ingredients": 0,
      "orders_received": 1,
    },
    "trace": [
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-003-full",
        "final_multiplier": 10,
        "order_quantity": 10,
        "recipe_id": "rec-001-chicken-teriyaki",
        "recipe_name": "Chicken Teriyaki",
        "serving_multiplier": 1,
        "variant_size": "serves_5",
      },
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-003-full",
        "final_multiplier": 10,
        "order_quantity": 10,
        "recipe_id": "rec-002-bbq-pulled-pork",
        "recipe_name": "BBQ Pulled Pork",
        "serving_multiplier": 1,
        "variant_size": "serves_5",
      },
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-003-full",
        "final_multiplier": 10,
        "order_quantity": 10,
        "recipe_id": "rec-003-garlic-broccoli",
        "recipe_name": "Garlic Broccoli",
        "serving_multiplier": 1,
        "variant_size": "serves_5",
      },
    ],
  },
  "prepTasks": {
    "BBQ Pulled Pork": {
      "allergens": null,
      "id": "rec-002-bbq-pulled-pork",
      "label_text": undefined,
      "qty": 10,
      "unit": "servings",
    },
    "Chicken Teriyaki": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "label_text": "Contains: Soy",
      "qty": 10,
      "unit": "servings",
    },
    "Garlic Broccoli": {
      "allergens": undefined,
      "id": "rec-003-garlic-broccoli",
      "label_text": undefined,
      "qty": 10,
      "unit": "servings",
    },
  },
  "rawIngredients": {
    "ing-001-chicken-breast": {
      "costPerUnit": 3.99,
      "costUnit": "lbs",
      "displayName": "Chicken Breast",
      "id": "ing-001-chicken-breast",
      "netQty": 0,
      "onHand": 5,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 5,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "lbs",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-002-olive-oil": {
      "costPerUnit": 0.1,
      "costUnit": "tbsp",
      "displayName": "Olive Oil",
      "id": "ing-002-olive-oil",
      "netQty": 0,
      "onHand": 10,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 4,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "Amazon",
      "supplierUrl": undefined,
      "unit": "tbsp",
      "usedIn": [
        "Garlic Broccoli",
      ],
    },
    "ing-003-salt": {
      "costPerUnit": 0.01,
      "costUnit": "tsp",
      "displayName": "Salt",
      "id": "ing-003-salt",
      "netQty": 0,
      "onHand": 100,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 2,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "tsp",
      "usedIn": [
        "BBQ Pulled Pork",
      ],
    },
    "ing-004-garlic": {
      "costPerUnit": 0.05,
      "costUnit": "tsp",
      "displayName": "Garlic",
      "id": "ing-004-garlic",
      "netQty": 0,
      "onHand": 20,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 8,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "tsp",
      "usedIn": [
        "Garlic Broccoli",
      ],
    },
    "ing-005-pork-loin": {
      "costPerUnit": 4.29,
      "costUnit": "lbs",
      "displayName": "Pork Loin",
      "id": "ing-005-pork-loin",
      "netQty": 8,
      "onHand": 0,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 8,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "lbs",
      "usedIn": [
        "BBQ Pulled Pork",
      ],
    },
    "ing-006-bbq-sauce": {
      "costPerUnit": 0.75,
      "costUnit": "cup",
      "displayName": "BBQ Sauce",
      "id": "ing-006-bbq-sauce",
      "netQty": 4,
      "onHand": 0,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 4,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "Amazon",
      "supplierUrl": "https://amazon.com",
      "unit": "cup",
      "usedIn": [
        "BBQ Pulled Pork",
      ],
    },
    "ing-007-brown-sugar": {
      "costPerUnit": 0.1,
      "costUnit": "cup",
      "displayName": "Brown Sugar",
      "id": "ing-007-brown-sugar",
      "netQty": 0,
      "onHand": 3,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.5,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "cup",
      "usedIn": [
        "BBQ Pulled Pork",
      ],
    },
    "ing-008-rice": {
      "costPerUnit": 0.5,
      "costUnit": "cup",
      "displayName": "Rice",
      "id": "ing-008-rice",
      "netQty": 0,
      "onHand": 10,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 6,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-009-soy-sauce": {
      "costPerUnit": 0.15,
      "costUnit": "cup",
      "displayName": "Soy Sauce",
      "id": "ing-009-soy-sauce",
      "netQty": 0,
      "onHand": 2,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 1,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-010-broccoli": {
      "costPerUnit": 1.99,
      "costUnit": "lbs",
      "displayName": "Broccoli",
      "id": "ing-010-broccoli",
      "netQty": 4,
      "onHand": 0,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 4,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "lbs",
      "usedIn": [
        "Garlic Broccoli",
      ],
    },
  },
}
`;

exports[`KitchenEngine.generateProductionRun — Snapshot Tests Scenario 6: Double-portion bundle (bundleContent.qty = 2) 1`] = `
{
  "assemblyTasks": {
    "Chicken Teriyaki - Family (5)": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "instructions": "Marinate chicken. Grill. Serve over rice.",
      "label_text": "Contains: Soy",
      "name": "Chicken Teriyaki",
      "qty": 10,
      "unit": "meals",
      "variant": "Family (5)",
    },
  },
  "debug": {
    "bundle_contributions": [
      {
        "bundle_id": "bundle-004-double-chicken",
        "recipe_count": 1,
        "serving_multiplier": 1,
        "total_multiplier_sum": 10,
        "variant_size": "serves_5",
      },
    ],
    "ingredient_count": 3,
    "ingredient_total_qty": 12,
    "multiplier_table": {
      "serves_2": 0.5,
      "serves_5": 1,
      "start_fresh": 1,
    },
    "reconciliation": {
      "bundles_processed": 1,
      "invalid_ingredients": 0,
      "orders_received": 1,
    },
    "trace": [
      {
        "bundle_content_quantity": 2,
        "bundle_id": "bundle-004-double-chicken",
        "final_multiplier": 10,
        "order_quantity": 5,
        "recipe_id": "rec-001-chicken-teriyaki",
        "recipe_name": "Chicken Teriyaki",
        "serving_multiplier": 1,
        "variant_size": "serves_5",
      },
    ],
  },
  "prepTasks": {
    "Chicken Teriyaki": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "label_text": "Contains: Soy",
      "qty": 10,
      "unit": "servings",
    },
  },
  "rawIngredients": {
    "ing-001-chicken-breast": {
      "costPerUnit": 3.99,
      "costUnit": "lbs",
      "displayName": "Chicken Breast",
      "id": "ing-001-chicken-breast",
      "netQty": 0,
      "onHand": 5,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 5,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "lbs",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-008-rice": {
      "costPerUnit": 0.5,
      "costUnit": "cup",
      "displayName": "Rice",
      "id": "ing-008-rice",
      "netQty": 0,
      "onHand": 10,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 6,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-009-soy-sauce": {
      "costPerUnit": 0.15,
      "costUnit": "cup",
      "displayName": "Soy Sauce",
      "id": "ing-009-soy-sauce",
      "netQty": 0,
      "onHand": 2,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 1,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
  },
}
`;

exports[`KitchenEngine.generateProductionRun — Snapshot Tests Scenario 7: Start fresh variant (1.0 identity multiplier) 1`] = `
{
  "assemblyTasks": {
    "Chicken Teriyaki - Family (5)": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "instructions": "Marinate chicken. Grill. Serve over rice.",
      "label_text": "Contains: Soy",
      "name": "Chicken Teriyaki",
      "qty": 1,
      "unit": "meals",
      "variant": "Family (5)",
    },
  },
  "debug": {
    "bundle_contributions": [
      {
        "bundle_id": "bundle-001-simple",
        "recipe_count": 1,
        "serving_multiplier": 1,
        "total_multiplier_sum": 1,
        "variant_size": "start_fresh",
      },
    ],
    "ingredient_count": 3,
    "ingredient_total_qty": 1.2000000000000002,
    "multiplier_table": {
      "serves_2": 0.5,
      "serves_5": 1,
      "start_fresh": 1,
    },
    "reconciliation": {
      "bundles_processed": 1,
      "invalid_ingredients": 0,
      "orders_received": 1,
    },
    "trace": [
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-001-simple",
        "final_multiplier": 1,
        "order_quantity": 1,
        "recipe_id": "rec-001-chicken-teriyaki",
        "recipe_name": "Chicken Teriyaki",
        "serving_multiplier": 1,
        "variant_size": "start_fresh",
      },
    ],
  },
  "prepTasks": {
    "Chicken Teriyaki": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "label_text": "Contains: Soy",
      "qty": 1,
      "unit": "servings",
    },
  },
  "rawIngredients": {
    "ing-001-chicken-breast": {
      "costPerUnit": 3.99,
      "costUnit": "lbs",
      "displayName": "Chicken Breast",
      "id": "ing-001-chicken-breast",
      "netQty": 0,
      "onHand": 5,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.5,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "lbs",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-008-rice": {
      "costPerUnit": 0.5,
      "costUnit": "cup",
      "displayName": "Rice",
      "id": "ing-008-rice",
      "netQty": 0,
      "onHand": 10,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.6000000000000001,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-009-soy-sauce": {
      "costPerUnit": 0.15,
      "costUnit": "cup",
      "displayName": "Soy Sauce",
      "id": "ing-009-soy-sauce",
      "netQty": 0,
      "onHand": 2,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.1,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
  },
}
`;

exports[`KitchenEngine.generateProductionRun — Snapshot Tests Scenario 8: Realistic production day (3 bundles, mixed sizes/quantities) 1`] = `
{
  "assemblyTasks": {
    "BBQ Pulled Pork - Family (5)": {
      "allergens": null,
      "id": "rec-002-bbq-pulled-pork",
      "instructions": "Slow cook pork. Shred. Mix with sauce.",
      "label_text": undefined,
      "name": "BBQ Pulled Pork",
      "qty": 12,
      "unit": "meals",
      "variant": "Family (5)",
    },
    "Chicken Teriyaki - Family (5)": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "instructions": "Marinate chicken. Grill. Serve over rice.",
      "label_text": "Contains: Soy",
      "name": "Chicken Teriyaki",
      "qty": 24,
      "unit": "meals",
      "variant": "Family (5)",
    },
    "Garlic Broccoli - Family (5)": {
      "allergens": undefined,
      "id": "rec-003-garlic-broccoli",
      "instructions": undefined,
      "label_text": undefined,
      "name": "Garlic Broccoli",
      "qty": 8,
      "unit": "meals",
      "variant": "Family (5)",
    },
  },
  "debug": {
    "bundle_contributions": [
      {
        "bundle_id": "bundle-001-simple",
        "recipe_count": 1,
        "serving_multiplier": 1,
        "total_multiplier_sum": 12,
        "variant_size": "serves_5",
      },
      {
        "bundle_id": "bundle-002-combo",
        "recipe_count": 2,
        "serving_multiplier": 0.5,
        "total_multiplier_sum": 4,
        "variant_size": "serves_2",
      },
      {
        "bundle_id": "bundle-003-full",
        "recipe_count": 3,
        "serving_multiplier": 1,
        "total_multiplier_sum": 24,
        "variant_size": "serves_5",
      },
    ],
    "ingredient_count": 10,
    "ingredient_total_qty": 53.7,
    "multiplier_table": {
      "serves_2": 0.5,
      "serves_5": 1,
      "start_fresh": 1,
    },
    "reconciliation": {
      "bundles_processed": 3,
      "invalid_ingredients": 0,
      "orders_received": 3,
    },
    "trace": [
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-001-simple",
        "final_multiplier": 12,
        "order_quantity": 12,
        "recipe_id": "rec-001-chicken-teriyaki",
        "recipe_name": "Chicken Teriyaki",
        "serving_multiplier": 1,
        "variant_size": "serves_5",
      },
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-002-combo",
        "final_multiplier": 2,
        "order_quantity": 4,
        "recipe_id": "rec-001-chicken-teriyaki",
        "recipe_name": "Chicken Teriyaki",
        "serving_multiplier": 0.5,
        "variant_size": "serves_2",
      },
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-002-combo",
        "final_multiplier": 2,
        "order_quantity": 4,
        "recipe_id": "rec-002-bbq-pulled-pork",
        "recipe_name": "BBQ Pulled Pork",
        "serving_multiplier": 0.5,
        "variant_size": "serves_2",
      },
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-003-full",
        "final_multiplier": 8,
        "order_quantity": 8,
        "recipe_id": "rec-001-chicken-teriyaki",
        "recipe_name": "Chicken Teriyaki",
        "serving_multiplier": 1,
        "variant_size": "serves_5",
      },
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-003-full",
        "final_multiplier": 8,
        "order_quantity": 8,
        "recipe_id": "rec-002-bbq-pulled-pork",
        "recipe_name": "BBQ Pulled Pork",
        "serving_multiplier": 1,
        "variant_size": "serves_5",
      },
      {
        "bundle_content_quantity": 1,
        "bundle_id": "bundle-003-full",
        "final_multiplier": 8,
        "order_quantity": 8,
        "recipe_id": "rec-003-garlic-broccoli",
        "recipe_name": "Garlic Broccoli",
        "serving_multiplier": 1,
        "variant_size": "serves_5",
      },
    ],
  },
  "prepTasks": {
    "BBQ Pulled Pork": {
      "allergens": null,
      "id": "rec-002-bbq-pulled-pork",
      "label_text": undefined,
      "qty": 10,
      "unit": "servings",
    },
    "Chicken Teriyaki": {
      "allergens": "Soy",
      "id": "rec-001-chicken-teriyaki",
      "label_text": "Contains: Soy",
      "qty": 22,
      "unit": "servings",
    },
    "Garlic Broccoli": {
      "allergens": undefined,
      "id": "rec-003-garlic-broccoli",
      "label_text": undefined,
      "qty": 8,
      "unit": "servings",
    },
  },
  "rawIngredients": {
    "ing-001-chicken-breast": {
      "costPerUnit": 3.99,
      "costUnit": "lbs",
      "displayName": "Chicken Breast",
      "id": "ing-001-chicken-breast",
      "netQty": 6,
      "onHand": 5,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 11,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "lbs",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-002-olive-oil": {
      "costPerUnit": 0.1,
      "costUnit": "tbsp",
      "displayName": "Olive Oil",
      "id": "ing-002-olive-oil",
      "netQty": 0,
      "onHand": 10,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 3.2,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "Amazon",
      "supplierUrl": undefined,
      "unit": "tbsp",
      "usedIn": [
        "Garlic Broccoli",
      ],
    },
    "ing-003-salt": {
      "costPerUnit": 0.01,
      "costUnit": "tsp",
      "displayName": "Salt",
      "id": "ing-003-salt",
      "netQty": 0,
      "onHand": 100,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 2,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "tsp",
      "usedIn": [
        "BBQ Pulled Pork",
      ],
    },
    "ing-004-garlic": {
      "costPerUnit": 0.05,
      "costUnit": "tsp",
      "displayName": "Garlic",
      "id": "ing-004-garlic",
      "netQty": 0,
      "onHand": 20,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 6.4,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "tsp",
      "usedIn": [
        "Garlic Broccoli",
      ],
    },
    "ing-005-pork-loin": {
      "costPerUnit": 4.29,
      "costUnit": "lbs",
      "displayName": "Pork Loin",
      "id": "ing-005-pork-loin",
      "netQty": 8,
      "onHand": 0,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 8,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "lbs",
      "usedIn": [
        "BBQ Pulled Pork",
      ],
    },
    "ing-006-bbq-sauce": {
      "costPerUnit": 0.75,
      "costUnit": "cup",
      "displayName": "BBQ Sauce",
      "id": "ing-006-bbq-sauce",
      "netQty": 4,
      "onHand": 0,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 4,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "Amazon",
      "supplierUrl": "https://amazon.com",
      "unit": "cup",
      "usedIn": [
        "BBQ Pulled Pork",
      ],
    },
    "ing-007-brown-sugar": {
      "costPerUnit": 0.1,
      "costUnit": "cup",
      "displayName": "Brown Sugar",
      "id": "ing-007-brown-sugar",
      "netQty": 0,
      "onHand": 3,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 0.5,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "cup",
      "usedIn": [
        "BBQ Pulled Pork",
      ],
    },
    "ing-008-rice": {
      "costPerUnit": 0.5,
      "costUnit": "cup",
      "displayName": "Rice",
      "id": "ing-008-rice",
      "netQty": 3.1999999999999993,
      "onHand": 10,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 13.2,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-009-soy-sauce": {
      "costPerUnit": 0.15,
      "costUnit": "cup",
      "displayName": "Soy Sauce",
      "id": "ing-009-soy-sauce",
      "netQty": 0.20000000000000018,
      "onHand": 2,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 2.2,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": "https://gfsstore.com",
      "unit": "cup",
      "usedIn": [
        "Chicken Teriyaki",
      ],
    },
    "ing-010-broccoli": {
      "costPerUnit": 1.99,
      "costUnit": "lbs",
      "displayName": "Broccoli",
      "id": "ing-010-broccoli",
      "netQty": 3.2,
      "onHand": 0,
      "portalType": undefined,
      "purchaseCost": undefined,
      "purchaseQuantity": undefined,
      "purchaseUnit": undefined,
      "qty": 3.2,
      "searchUrlPattern": undefined,
      "sku": undefined,
      "supplier": "GFS",
      "supplierUrl": undefined,
      "unit": "lbs",
      "usedIn": [
        "Garlic Broccoli",
      ],
    },
  },
}
`;
